--- a/index.html
+++ b/index.html
@@ -320,11 +320,11 @@
                         </h1>
                     </div>
                 <div class="form__group">
-                    <input type="text" class="form__input" placeholder="Full name" id="name" required>
+                    <input type="text" class="form__input" placeholder="Full Name" id="name" required>
                     <label for="name" class="form__label" >Full Name</label>
                 </div> 
                 <div class="form__group">
-                    <input type="email" class="form__input" placeholder="Full name" id="email" required>
+                    <input type="email" class="form__input" placeholder="Email Address" id="email" required>
                     <label for="email" class="form__label">email</label>
                 </div>   
                 <div class="form__group u-margin-bottom-medium">
