--- a/index.html
+++ b/index.html
@@ -320,25 +320,26 @@
                         </h1>
                     </div>
                 <div class="form__group">
-                    <input type="text" class="form__input" placeholder="Full Name" id="name" required>
-                    <label for="name" class="form__label" >Full Name</label>
+                    <input type="text" class="form__input" placeholder="Full name" id="name" required>
+                    <label for="name" class="form__label" >Full name</label>
                 </div> 
                 <div class="form__group">
-                    <input type="email" class="form__input" placeholder="Email Address" id="email" required>
-                    <label for="email" class="form__label">email</label>
+                    <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                    <label for="email" class="form__label">Email address</label>
                 </div>   
                 <div class="form__group u-margin-bottom-medium">
                     <div class="form__radio--group">
                         <input type="radio" name="size" id="small"
                         class="form__radio--input">
                         <label for="small" class="form__radio--label"> 
-                        <span>Small tour group</span></label>
+                        <span class="form__radio--bottom"></span>Small tour group</label>
                     </div>
+
                     <div class="form__radio--group">
                         <input type="radio" name="size" id="large" class="form__radio--input">
                         <label for="large" class="form__radio--label"><span class="form__radio--bottom">
-                            Large tour group
-                        </span></label>
+                        </span>   Large tour group
+                        </label> 
                     </div>
 
                 </div>
