--- a/index.html
+++ b/index.html
@@ -354,9 +354,32 @@
     </div>
 </section>
 
-<section class="section--footer">
-    
-</section>
+<!-- footer section starts -->
+<footer class="footer">
+    <div class="footer__logo--box u-margin-bottom-big">
+        <img src="/img/logo-green-2x.png" alt="full logo" class="footer__logo">
+    </div>
+    <div class="row">
+        <div class="col-1-of-2 ">
+            <div class="footer__navigation">
+                <ul class="footer__list">
+                    <li class="footer__item"><a href="#" class="footer__link">company</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Contact us</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">carrers</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Privacy policy</a></li>
+                    <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-1-of-2">
+            <p class="footer__copyright "> Built by <a href="#" class="footer__link">Niraj Chemjong</a> for his online
+                course <a href="#" class="footer__link">Advanced css ans sass</a>. Copyright &copy; by Niraj Chemjong.
+                You are 100% allowed to use this webpage for both personal and commercial use, but NOT to claim it as
+                your own
+                design. A credit to the original author, Jonas Schmedtmann, is of course highly appreciated!</p>
+        </div>
+    </div>
+</footer>
 
         <!-- <section class="selection__tour">
             <div class="u-center-text u-margin-top-10">
