updated HTML for navigation
updated nav.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 
+    <section class="navigation">
+        <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+        <label for="navi-toggle" class="navigation__botton" >
+          <span class="navigation_icon">menu</span>
+        </label>
+        <div class="navigation__background">&nbsp;</div>
+        <nav class="navigation__nav">
+            <ul class="navigation__list">
+                <li class="navigation__item">
+                  <a href="" class="navigation__link">About Natours</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">Your benefits</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">popular tours</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">stories</a>
+                </li>
+                <li class="navigation__item">
+                    <a href="" class="navigation__link">Book Now</a>
+                </li>
+            </ul>
+        </nav>
+    </section>
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,7 +40,6 @@
 
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
-
 <body>
     <header class="header">
         <div class="header__logo-box">
@@ -29,7 +55,6 @@
             <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
         </div>
     </header>
-
     <main>
         <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
@@ -415,8 +440,6 @@
 
         </section> -->
 
-    </main>
-
     <!-- <section class="grid-test">
         <div class="row">
             <div class="col-1-of-2">This is a Column 1 of 2</div>
@@ -453,6 +476,10 @@
         </div>
 
     </section> -->
+    </main>
+
+   
+
 </body>
 
 </html>
