--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 
+   
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
+
+    <link rel="stylesheet" href="css/icon-font.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
+
+    <title>Natours | Exciting tours for adventurous people</title>
+</head>
+<body>
+    
+
+    <header class="header">
+        <div class="header__logo-box">
+            <img src="img/logo-white.png" alt="logo" class="header__logo" />
+            <!-- this part is for logo where it's position is made according to parent element which is header.  -->
+        </div>
+
+        <div class="header__text-box">
+            <h1 class="heading-primary">
+                <span class="heading-primary--main"> Outdoors </span>
+                <span class="heading-primary--sub"> Is where life happens </span>
+            </h1>
+            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        </div>
+    </header>
+
     <section class="navigation">
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
-        <label for="navi-toggle" class="navigation__botton" >
-          <span class="navigation_icon">menu</span>
+        <label for="navi-toggle" class="navigation__botton" > Menu
+          <span class="navigation_icon">&nbsp;</span>
         </label>
         <div class="navigation__background">&nbsp;</div>
         <nav class="navigation__nav">
@@ -26,36 +58,14 @@
                 </li>
             </ul>
         </nav>
+        <div class="niraj">
+        <button class="niraj__cubic"></button>
+        </div>
     </section>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
-
-    <link rel="stylesheet" href="css/icon-font.css" />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-
-    <title>Natours | Exciting tours for adventurous people</title>
-</head>
-<body>
-    <header class="header">
-        <div class="header__logo-box">
-            <img src="img/logo-white.png" alt="logo" class="header__logo" />
-            <!-- this part is for logo where it's position is made according to parent element which is header.  -->
-        </div>
-
-        <div class="header__text-box">
-            <h1 class="heading-primary">
-                <span class="heading-primary--main"> Outdoors </span>
-                <span class="heading-primary--sub"> Is where life happens </span>
-            </h1>
-            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
-        </div>
-    </header>
     <main>
+        
         <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
