--- a/index.html
+++ b/index.html
@@ -42,25 +42,23 @@
         <nav class="navigation__nav">
             <ul class="navigation__list">
                 <li class="navigation__item">
-                  <a href="" class="navigation__link">About Natours</a>
+                  <a href="" class="navigation__link"> <span>01</span>About Natours</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="" class="navigation__link">Your benefits</a>
+                    <a href="" class="navigation__link">  <span>02</span>Your benefits</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="" class="navigation__link">popular tours</a>
+                    <a href="" class="navigation__link"> <span>03</span>popular tours</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="" class="navigation__link">stories</a>
+                    <a href="" class="navigation__link"> <span>04</span>stories</a>
                 </li>
                 <li class="navigation__item">
-                    <a href="" class="navigation__link">Book Now</a>
+                    <a href="" class="navigation__link"> <span>05</span>Book Now</a>
                 </li>
             </ul>
         </nav>
-        <div class="niraj">
-        <button class="niraj__cubic"></button>
-        </div>
+       
     </section>
 
 
@@ -156,8 +154,6 @@
                     </div>
                 </div>
             </div>
-
-
         </section>
         <section class="section_tour">
             <div class="u-center-text u-margin-bottom-big">
