--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <section class="navigation">
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
-        <label for="navi-toggle" class="navigation__botton" > Menu
-          <span class="navigation_icon">&nbsp;</span>
+        <label for="navi-toggle" class="navigation__botton" > 
+          <span class="navigation__icon">&nbsp;</span>
         </label>
         <div class="navigation__background">&nbsp;</div>
         <nav class="navigation__nav">
