creating pop-up section
almost done with pop up section! worked with display:table function and column-count with the paragraph.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-   
 
 <head>
     <meta charset="UTF-8" />
@@ -15,6 +14,7 @@
 
     <title>Natours | Exciting tours for adventurous people</title>
 </head>
+
 <body>
     
 
@@ -199,7 +199,7 @@
                                     </p>
 
                                 </div>
-                                <a href="#" class="btn btn--white btn--anitmate">book now</a>
+                                <a href="#section--popup" class="btn btn--white btn--anitmate">book now</a>
                             </div>
                         </div>
 
@@ -412,6 +412,37 @@
     </div>
 </footer>
 
+
+<section class="section--popup" id="section--popup">
+
+    <div class="popup__box">
+        <div class="popup__box--left">
+            <img src="/img/nat-8.jpg" alt="tour photo" class="popup__img"srcset="">
+
+            <img src="/img/nat-9.jpg" alt="tour photo" class="popup__img"srcset="">
+        </div>
+        <div class="popup__box--right">
+            <h2 class="heading-secondary u-margin-bottom-small">Start Booking now</h1>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important – Please read these terms before booking</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Sed sed risus pretium quam. Aliquam sem et tortor consequat id. Volutpat odio facilisis mauris sit
+                    amet massa vitae. Mi bibendum neque egestas congue. Placerat orci nulla pellentesque dignissim enim
+                    sit. Vitae semper quis lectus nulla at volutpat diam ut venenatis. Malesuada pellentesque elit eget
+                    gravida cum sociis natoque penatibus et. Proin fermentum leo vel orci porta non pulvinar neque laoreet.
+                    Gravida neque convallis a cras semper. Molestie at elementum eu facilisis sed odio morbi quis. Faucibus
+                    vitae aliquet nec ullamcorper sit amet risus nullam eget. Nam libero justo laoreet sit. Amet massa
+                    vitae tortor condimentum lacinia quis vel eros donec. Sit amet facilisis magna etiam. Imperdiet sed
+                    euismod nisi porta.
+                </p>
+                <a href="#" class="btn btn--green">Book now</a>
+
+
+        </div>
+    </div>
+
+</section>
+
         <!-- <section class="selection__tour">
             <div class="u-center-text u-margin-top-10">
                 <h1 class="heading-secondary ">most popular tours</h1>
@@ -487,5 +518,6 @@
    
 
 </body>
+
 
 </html>
