this is media query
added media query on different breakpoint using mixing .

--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@
             <img src="/img/nat-9.jpg" alt="tour photo" class="popup__img"srcset="">
         </div>
         <div class="popup__box--right">
+            <a href="#section-tours" class="popup__close"> &#9587;</a>
             <h2 class="heading-secondary u-margin-bottom-small">Start Booking now</h1>
                 <h3 class="heading-tertiary u-margin-bottom-small">Important – Please read these terms before booking</h3>
                 <p class="popup__text">
